# nightmare-obfuscator

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  oss-smoke.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: contract.rs  lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bip39.rs  keys.rs  lib.rs  signing.rs
crates/obfuscator/: Cargo.toml
crates/obfuscator/src/: control_flow.rs  dead_code.rs  lib.rs  mangler.rs  string_encrypt.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: access.rs  lib.rs  timelock.rs
docs/: branch-protection.md  language-support.md  mcp-adapter-plan.md  oss-smoke-matrix.md  run-contract.md  session-handoff-2026-06-09.md
fixtures/rust-basic/: Cargo.toml
fixtures/rust-basic/src/: lib.rs  main.rs
fixtures/rust-selected/: Cargo.toml
fixtures/rust-selected/src/: lib.rs  t.rs  x.rs  y.rs  z.rs
fixtures/rust-string-encrypt/: Cargo.toml
fixtures/rust-string-encrypt/src/: lib.rs
scripts/: oss_smoke_matrix.sh
src/: main.rs
src/commands/: decrypt.rs  gate.rs  init.rs  mod.rs  obfuscate.rs  run.rs  signing.rs  tui.rs  vault.rs  verify.rs
tests/: acceptance.rs  governance.rs  language_policy.rs  smoke_matrix.rs
