[package]
name = "nightmare"
version = "0.1.0"
edition = "2021"
authors = ["Nightmare Collective"]
description = "Defensive Rust obfuscation for controlled IP sharing with provenance metadata."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cdli-ai/nightmare-obfuscator"

[[bin]]
name = "nightmare"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/obfuscator",
    "crates/crypto",
    "crates/vault",
    "crates/parser",
]

[dependencies]
nightmare-core = { path = "crates/core" }
nightmare-obfuscator = { path = "crates/obfuscator" }
nightmare-crypto = { path = "crates/crypto" }
nightmare-vault = { path = "crates/vault" }
nightmare-parser = { path = "crates/parser" }

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
colored = "2.1"
indicatif = "0.17"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
