[package]
name = "nightmare-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
nightmare-core = { path = "../core" }

aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
