[package]
name = "nightmare-obfuscator"
version = "0.1.0"
edition = "2021"

[dependencies]
nightmare-core = { path = "../core" }
nightmare-crypto = { path = "../crypto" }

regex = "1.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
lazy_static = "1.4"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
