[package]
name = "nightmare-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nightmare-core = { path = "../core" }

tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.19"
tree-sitter-c = "0.20"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
